--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "axios": "^1.6.0" 
   }
 }
